--- a/UserPanel/User_Order_Status/style.css
+++ b/UserPanel/User_Order_Status/style.css
@@ -1,7 +1,10 @@
 body{
     background-image: url('./hero-slider-3.jpg');
-}
+   
+    
 
+}
+/* 
 @media screen and (min-width: 995px) {
 .row{
     flex-direction: row !important;
@@ -9,4 +12,4 @@ body{
 .col{
     width: 50%;
 }
-}
+} */
