--- a/AdminPanel/category/style.css
+++ b/AdminPanel/category/style.css
@@ -286,7 +286,7 @@ table, th, td {
 }
 
 thead th {
-    position: sticky;
+
     top: 0;
     left: 0;
     background-color: #d5d1defe;
@@ -411,4 +411,18 @@ thead th.active,tbody td.active {
     color: #b30021;
     text-decoration: none;
     padding: 0 .5rem;
+}
+
+
+@media screen and (min-width: 980px) {
+	th:nth-child(2),td:nth-child(2) {
+		width: 200px;
+	}
+	th:nth-child(3),td:nth-child(3) {
+		width: 200px;
+	}
+	th:nth-child(4),td:nth-child(4) {
+		width: 400px;
+	}
+	
 }
